# Event_Bazar

./: .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  pages.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  integrations.py  main.py  models.py  schemas.py  seed.py
apps/api/app/routers/: auth.py  events.py  sources.py
apps/api/scripts/: export_live_events.py
apps/api/tests/: test_api.py
apps/mobile/: .gitignore  capacitor.config.json  package-lock.json  package.json
apps/mobile/android/app/: build.gradle
apps/mobile/www/: index.html
apps/web/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/create-event/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/messages/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/components/: account-screen.tsx  app-shell.tsx  countdown.tsx  create-event-form.tsx  detail-actions.tsx  event-admin.tsx  event-card.tsx  event-discussion.tsx  login-screen.tsx  logo.tsx  messages-screen.tsx  providers.tsx  public-profile.tsx
apps/web/lib/: api.ts  data.ts  native.ts  site.ts  types.ts
apps/web/public/: manifest.json  sw.js
apps/web/public/data/: upcoming.json
apps/web/utils/supabase/: client.ts  (+2 more)
docs/: ARCHITECTURE.md
supabase/: admin-key-access.sql  chat-and-notifications.sql  comment-reactions-avatar.sql  event-reactions.sql  fix-auth-signup.sql  make-admin.sql  realtime-engagement.sql  schema.sql
(+7 files in other folders)
